Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ mcs -o+ -t:library -out:Wax.dll *.cs
 
 <p>Then, in your code,</p>
 
-<div class="highlight highlight-csharp"><pre><span class="k">using</span> <span class="nn">ExpressionKit</span><span class="p">;</span>
+<div class="highlight highlight-csharp"><pre><span class="k">using</span> <span class="nn">ExpressionKit.Unwrap</span><span class="p">;</span>
 </pre></div>
 
 <h1>
@@ -78,7 +78,7 @@ but I may extend these to the full length offered by <code>Func&lt;T...&gt;</cod
 <div class="highlight highlight-csharp"><pre><span class="k">using</span> <span class="nn">System</span><span class="p">;</span>
 <span class="k">using</span> <span class="nn">System.Linq</span><span class="p">;</span>
 <span class="k">using</span> <span class="nn">System.Linq.Expressions</span><span class="p">;</span>
-<span class="k">using</span> <span class="nn">ExpressionKit</span><span class="p">;</span>
+<span class="k">using</span> <span class="nn">ExpressionKit.Unwrap</span><span class="p">;</span>
 
 <span class="k">static</span> <span class="k">class</span> <span class="nc">MyProgram</span>
 <span class="p">{</span>
@@ -107,7 +107,7 @@ Using <code>UnwrappedWhere</code>, our above example becomes:</p>
 <div class="highlight highlight-csharp"><pre><span class="k">using</span> <span class="nn">System</span><span class="p">;</span>
 <span class="k">using</span> <span class="nn">System.Linq</span><span class="p">;</span>
 <span class="k">using</span> <span class="nn">System.Linq.Expressions</span><span class="p">;</span>
-<span class="k">using</span> <span class="nn">ExpressionKit</span><span class="p">;</span>
+<span class="k">using</span> <span class="nn">ExpressionKit.Unwrap</span><span class="p">;</span>
 
 <span class="k">static</span> <span class="k">class</span> <span class="nc">MyProgram</span>
 <span class="p">{</span>
